syntax = "proto3";

package go.micro.srv.user;

service Auth {
	rpc Name(NameRequest) returns (AuthResponse) {}
	rpc Mobile(MobileRequest) returns (AuthResponse) {}
}

message NameRequest {
	string name = 1;
	string password = 2;
}

message MobileRequest {
	string mobile = 1;
	string code = 2;
}

message AuthResponse {
	string header = 1;
  string token = 2;
  string expiresAt = 3;
}